Validate the image the favicon engine provides to the web-browser applet. In some case it could return an invalid image, which when being setted as the PopupIcon broke the layouting of the plasmoid

BUG: 179815

svn path=/trunk/KDE/kdebase/workspace/; revision=959320